--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "json-server": "^0.16.3",
+    "moment": "^2.29.1",
     "v-uploader": "^1.8.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
